--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</a>
 				</div>
 				<ul class="nav list-inline navbar navbar-nav navbar-right">
-						<li class="active"><a href="fragrante_main.html" class="btn btn-link">Главная</a></li>
+						<li class="active"><a href="index.html" class="btn btn-link">Главная</a></li>
 						<li><a href="about_aromamarketing.html" class="btn btn-link ">Об аромамаркетинге</a></li>
 						<li><a href="oborudovanie.html" class="btn btn-link">Оборудование</a></li>
 						<li><a href="aromaty.html" class="btn btn-link">Ароматы</a></li>
