--- a/about_aromamarketing.html
+++ b/about_aromamarketing.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-nav">
 		<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="fragrante_main.html">
+					<a class="navbar-brand" href="index.html">
 						<h5>
 						<img src="logo_fragrante.jpg" alt="logo">
 						Фрагранте
