--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav class="navbar navbar-nav">
 		<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="fragrante_main.html">
+					<a class="navbar-brand" href="index.html">
 						<h5>
 						<img id="logo" src="logo_fragrante.jpg" alt="logo">
 						Фрагранте
