--- a/oborudovanie.html
+++ b/oborudovanie.html
@@ -14,7 +14,7 @@
 			<nav class="navbar navbar-nav">
 				<div class="container">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="fragrante_main.html">
+							<a class="navbar-brand" href="index.html">
 								<h5>
 								<img src="logo_fragrante.jpg" alt="logo">
 								Фрагранте
@@ -22,7 +22,7 @@
 							</a>
 						</div>
 						<ul class="col-sm-8 list-inline navbar navbar-nav navbar-right">
-								<li class="active"><a href="fragrante_main.html" class="btn btn-link">Главная</a></li>
+								<li class="active"><a href="index.html" class="btn btn-link">Главная</a></li>
 								<li><a href="about_aromamarketing.html" class="btn btn-link ">Об аромамаркетинге</a></li>
 								<li><a href="oborudovanie.html" class="btn btn-link">Оборудование</a></li>
 								<li><a href="aromaty.html" class="btn btn-link">Ароматы</a></li>
