--- a/aromaty.html
+++ b/aromaty.html
@@ -32,13 +32,44 @@
 	</header>
 		<div class="container page-header">
 		<section class="jumbotron">
-		<div class="container">
-	<h2 class="well">Ароматы</h2>
-	<p id="about">Страница находится в разработке!</p>
-	<img src="vrazrabotke.jpg">
-		</div>
-		</section>
-		<div>
+		<div class="container-fluid bg-grey">
+		<h2>Ароматы</h2>
+		<div class="row text-center">
+			<div class="col-sm-3">
+				<div class="thumbnail">
+					<img src="chock.jpg">
+					<p>
+					Шоколад
+					</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="thumbnail">
+					<img src="trava.jpg">
+					<p>
+					Свежескошенная трава
+					</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="thumbnail">
+					<img src="coffee.jpg">
+					<p>
+					Кофе
+					</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="thumbnail">
+					<img src="apple.jpg">
+					<p>
+					Зеленое яблоко
+					</p>
+				</div>
+			</div>
+			
+		</div>	
+	</div>
 	</body>
 	</head>
 </html>
